# robonet-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  dependencies.py  logger.py  main.py  robonet_public_api_url.py
app/models/: chunk.py  session.py  user.py
app/routers/: auth.py  sessions.py  sync_signals.py  uploads.py
app/services/: firebase.py  r2.py
docs/: scheme_backend.md
tests/: conftest.py  test_health.py  test_sessions.py
